--- a/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -59,6 +59,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CustomerControllerTests.cs" />
     <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="ReservationTests.cs" />
