--- a/TestNinja.UnitTests/TestNinja.UnitTests.csproj
+++ b/TestNinja.UnitTests/TestNinja.UnitTests.csproj
@@ -65,6 +65,8 @@
     <Compile Include="FizzBuzzTests.cs" />
     <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="MathTests.cs" />
+    <Compile Include="Mocking\FakeFileReader.cs" />
+    <Compile Include="Mocking\VideoServiceTests.cs" />
     <Compile Include="ReservationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTests.cs" />
