--- a/TestNinja/TestNinja.csproj
+++ b/TestNinja/TestNinja.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Mocking\FileDownloader.cs" />
     <Compile Include="Mocking\EmployeeController.cs" />
     <Compile Include="Mocking\FileReader.cs" />
+    <Compile Include="Mocking\HousekeeperHelper.cs" />
     <Compile Include="Mocking\IBookingRepository.cs" />
     <Compile Include="Mocking\ICustomer.cs" />
     <Compile Include="Mocking\IEmployeeStorage.cs" />
