--- a/TestNinja/TestNinja.csproj
+++ b/TestNinja/TestNinja.csproj
@@ -71,11 +71,16 @@
     <Compile Include="Mocking\ICustomer.cs" />
     <Compile Include="Mocking\IEmployeeStorage.cs" />
     <Compile Include="Mocking\IFileReader.cs" />
+    <Compile Include="Mocking\IEmailSender.cs" />
     <Compile Include="Mocking\InstallerHelper.cs" />
+    <Compile Include="Mocking\IStatementGenerator.cs" />
     <Compile Include="Mocking\IVideoRepository.cs" />
+    <Compile Include="Mocking\EmailSender.cs" />
+    <Compile Include="Mocking\IXtraMessageBox.cs" />
     <Compile Include="Mocking\OrderService.cs" />
     <Compile Include="Mocking\Product.cs" />
     <Compile Include="Mocking\Program.cs" />
+    <Compile Include="Mocking\StatementGenerator.cs" />
     <Compile Include="Mocking\VideoRepository.cs" />
     <Compile Include="Mocking\VideoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
